# vk-tutors-bot

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  compose.prod.yaml  compose.yaml
backend/: Dockerfile  logging.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_01_create_directory_tables.py  20260714_02_create_auth_sessions.py  20260714_03_create_broadcast_tables.py  20260714_04_create_response_table.py  20260714_05_create_response_media_table.py  20260720_06_allow_shared_reaction_message.py  20260720_07_add_chat_activity.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  broadcasts.py  directory.py  health.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/integrations/vk/: __init__.py  client.py  confirmations.py  listener.py  media.py
backend/app/models/: __init__.py  auth.py  broadcast.py  directory.py  response.py
backend/app/scheduler/: worker.py
backend/app/services/: analytics.py  auth.py  broadcasts.py  chat_directory.py  exports.py  media.py  outbox.py  responses.py
backend/tests/: test_analytics_api.py  test_auth.py  test_broadcast_api.py  test_config.py  test_confirmations.py  test_directory_api.py  test_exports.py  test_health.py  test_logging.py  test_models.py  test_response_results.py  test_vk_client.py  test_vk_listener.py  test_vk_media.py  test_worker.py
deploy/: Caddyfile  backup.sh  monitor.sh  restore.sh  verify-backup.sh
docs/: admin-guide.md  architecture.md  database.md  production.md  vk-spike.md
(+37 files in other folders)
