[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vk-tutors-bot-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.5",
    "apscheduler==3.11.3",
    "asyncpg==0.31.0",
    "fastapi==0.139.0",
    "openpyxl==3.1.5",
    "pydantic-settings==2.14.2",
    "python-docx==1.2.0",
    "sqlalchemy[asyncio]==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.5.0",
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
